--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,9 @@ alembic==1.16.5
 Mako==1.3.10
 MarkupSafe==3.0.3
 
-# ML stuff
-numpy==1.26.4
-tensorflow==2.20.0
+# ML
+# Let TensorFlow choose compatible NumPy / ml-dtypes automatically
+tensorflow>=2.19.0
 deepface==0.0.93
 
 # dev
